--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,6 +25,6 @@ phases:
       - echo "Build completed successfully!"
 artifacts:
   files:
-    - '**/*'
-  base-directory: simple-python-app
+    - 'simple-python-app/**/*'
+  base-directory: .
 
